Basic charts that were created with recharts and react.

--- a/package.json
+++ b/package.json
@@ -7,11 +7,21 @@
     "react-dom": "^15.6.1"
   },
   "devDependencies": {
-    "autoprefixer": "^7.1.1",
+    "autoprefixer": "^7.1.4",
+    "breakpoint-sass": "^2.7.1",
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-jshint": "^2.0.4",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^3.1.0",
+    "gulp-uglify": "^3.0.0",
+    "jshint": "^2.9.5",
     "node-sass": "^4.5.3",
+    "postcss": "^6.0.11",
+    "postcss-cli": "^4.1.1",
     "react-scripts": "1.0.10",
-    "recharts": "^1.0.0-alpha.1",
-    "sass": "^1.0.0-beta.1"
+    "recharts": "^1.0.0-apha.5",
+    "sass": "^1.0.0-beta.2"
   },
   "scripts": {
     "start": "npm run build:css && react-scripts start",
@@ -19,7 +29,7 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "autoprefix": "postcss --use autoprefixer -r public/main.css",
-    "build:scss": "node-sass src/index.scss public/main.css",
+    "build:scss": "node-sass src/main.scss public/main.css",
     "build:css": "npm run build:scss && npm run autoprefix",
     "watch": "npm run build:css && node-sass -w src/**/*.scss -or public/main.css"
   }
